# oeh-search-etl

./: .env.example  .env.local  .gitignore  Dockerfile.edusharing-crawler  Dockerfile.edusharing-setup  Readme.md  cr.yaml  docker-compose.yml  pyproject.toml  requirements.txt  run.py
.github/workflows/: build-and-push-image.yml  build_and_push_image.yml  push-helm-chart.yml  push-helm.yml  python.yaml  trivy-cron.yaml
charts/: index.yaml
charts/edusharing-crawler/: Chart.yaml  README.md  values.yaml
charts/edusharing-crawler/templates/: _helpers.tpl
converter/: es_connector.py  items.py  pipelines.py  settings.py  web_tools.py
converter/spiders/: bne_portal_spider.py  mediothek_pixiothek_spider.py  merlin_spider.py  oeh_spider.py  test.py
converter/spiders/base_classes/: lom_base.py
schulcloud/: oeh_importer.py  permission_updater.py
schulcloud/brb_sportinhalte/: convert_to_collection.py  modify_sportinhalt.py
schulcloud/h5p/: metadata.py  upload.py
schulcloud/sodix/: sodix.py
valuespace_converter/app/: requirements.txt
