[project]
name = "oeh-search-etl"
description = "Crawls educational sites for use in wirlernenonline.de"
authors = [
    { name = "Torsten Simon", email = "simon@edu-sharing.net" }
]
maintainers = [
    { name = "Andreas Schnäpp", email = "schnaepp@edu-sharing.net" }
]
readme = "Readme.md"
requires-python = "^3.13"
version = "2025.01.07"
dynamic = ["dependencies"]
homepage = "https://github.com/openeduhub/oeh-search-etl"
repository = "https://github.com/openeduhub/oeh-search-etl"
documentation = "https://github.com/openeduhub/oeh-search-etl"

keywords = ["metadata", "oer", "crawl", "wirlernenonline"]

classifiers = [
    "Framework :: Scrapy",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education :: Testing",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]

[tool.black]
line-length = 120
target-version = ['py313']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | \venv
    | _build
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.poetry]
packages = [{include = "converter"}]
requires-poetry = ">=2.0"

[tool.poetry.dependencies]
python = "^3.13"
wheel = "0.44.0"
black = "24.8.0"
certifi="2024.8.30"
dateparser="1.2"
extruct="0.17.0"
flake8 = "7.1.1"
html2text="2024.2.26"
jmespath="1.0.1"
image = "1.5.33"
itemadapter="0.9.0"
itemloaders="1.3.1"
isodate="0.6.1"
Pillow="10.3.0"
playwright="1.44.0"
pytest="8.3.2"
python-dateutil="2.9.0.post0"
python-dotenv="1.0.1"
requests="2.32.3"
six="1.16.0"
Scrapy="2.11.2"
scrapy-splash="0.9.0"
vobject="0.9.7"
w3lib="2.2.1"
xmltodict="0.13.0"
trafilatura = "1.12.1"
babel = "2.15.0"
langcodes = {extras = ["data"], version = "^3.3.0"}
httpx = "0.27.2"
async-lru = "2.0.4"
urllib3 = "2.2.2"
boto3 = "1.35.14"
openpyxl = "3.1.5"

[tool.poetry.group.edu_sharing_client.dependencies]
# these dependencies are used (and automatically generated) by the "openapi-generator-cli"-generated client
# see: /edu_sharing_openapi/pyproject.toml
pydantic = ">=2.8.2"
typing-extensions = ">=4.12.2"
edu-sharing-client = {path = "edu_sharing_openapi"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
